--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="StylePrototype">
 <head>
   <meta charset="UTF-8">
-  <title>gulp</title>
+  <title>Style Prototype</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+  <header ng-controller="spYamlRead">
+    <component name="message" aspect="error"></component>
+
+    <component name="message" aspect="warning"></component>
+
+  </header>
+
+  <!-- build:js js/app.js -->
+  <script src="bower_components/angular/angular.min.js"></script>
+  <script src="bower_components/js-yaml/js-yaml.min.js"></script>
+  <script src="js/app.js"></script>
+  <!-- endbuild -->
 </body>
 </html>
