More search goodies, added Style Tile to nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header ng-controller="GlobalHeader">
     <nav role="navigation" data-sp-class="navigation">
       <div menu="menu"></div>
-      <input type="search" ng-model="search.term" placeholder="Search" data-sp-class="navigation--search">
+      <input type="search" ng-model="search.term" placeholder="Search" results='5' autosave='GlobalSearch' name='s' data-sp-class="navigation--search">
     </nav>
   </header>
 <!--
