Ignoring Ish for now

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   <script src="js/directives.js"></script>
   <script src="js/app.js"></script>
 
-  <script src="js/ish.js"></script>
+  <!--<script src="js/ish.js"></script>-->
   <!-- endbuild -->
 </body>
 </html>
