Spun Templates and Factories into separate JS files
Also, style-tile.json

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
   <script src="bower_components/js-yaml/js-yaml.js"></script>
   <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
 
+  <script src="js/templates.js"></script>
+  <script src="js/factories.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/app.js"></script>
 
