--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <li data-sp-class="ish--large"><a href="#" data-sp-class="ish--link" data-sp-id="ish--hay">Hay</a></li>
           </ul>
         </div>
-        <input type="search" ng-model="search.term" placeholder="Search" results='5' autosave='GlobalSearch' name='s' data-sp-class="navigation--search">
+        <input type="search" ng-model="StylePrototypeSearch.term" placeholder="Search" results='5' autosave='GlobalSearch' name='s' data-sp-class="navigation--search">
       </div>
 
     </nav>
