--- a/index.html
+++ b/index.html
@@ -11,27 +11,7 @@
 </head>
 <body>
   <header ng-controller="GlobalHeader">
-    <nav ng-if="show" role="navigation" data-sp-class="navigation">
-      <div menu="menu"></div>
-      <div data-sp-class="navigation--secondary">
-        <div ng-if="ish" data-sp-class="ish">
-          <form data-sp-class="ish--form" data-sp-id="ish--form">
-            Size <input type="text" data-sp-class="ish--size-px" value="320">px
-          </form>
-          <ul data-sp-class="ish--options">
-            <li data-sp-class="ish--small"><a href="#" data-sp-class="ish--link" data-sp-id="ish--s">S</a></li>
-            <li data-sp-class="ish--small"><a href="#" data-sp-class="ish--link" data-sp-id="ish--m">M</a></li>
-            <li data-sp-class="ish--small"><a href="#" data-sp-class="ish--link" data-sp-id="ish--l">L</a></li>
-            <li data-sp-class="ish--large"><a href="#" data-sp-class="ish--link" data-sp-id="ish--full">Full</a></li>
-            <li data-sp-class="ish--large"><a href="#" data-sp-class="ish--link" data-sp-id="ish--random">Random</a></li>
-            <li data-sp-class="ish--large"><a href="#" data-sp-class="ish--link" data-sp-id="ish--disco">Disco</a></li>
-            <li data-sp-class="ish--large"><a href="#" data-sp-class="ish--link" data-sp-id="ish--hay">Hay</a></li>
-          </ul>
-        </div>
-        <input type="search" ng-model="StylePrototypeSearch.term" placeholder="Search" results='5' autosave='GlobalSearch' name='s' data-sp-class="navigation--search">
-      </div>
-
-    </nav>
+    <div navbar></div>
   </header>
 
   <main ng-view></main>
