--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
   <script src="js/directives.js"></script>
   <script src="js/app.js"></script>
 
+  <script src="js/test.js"></script>
+
   <!--<script src="js/ish.js"></script>-->
   <!-- endbuild -->
 </body>
