--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>Style Prototype</title>
   <!-- build:css css/app.css -->
   <link rel="stylesheet" href="css/prototype.css">
+  <!-- <link rel="stylesheet" href="css/prism-okaidia.css"> -->
+  <link rel="stylesheet" href="bower_components/prism/themes/prism-okaidia.css">
   <link rel="stylesheet" href="css/style.css">
   <!-- endbuild -->
   <base href="/">
@@ -26,6 +28,13 @@
   <script src="js/factories.js"></script>
   <script src="js/directives.js"></script>
   <script src="js/app.js"></script>
+
+  <script src="bower_components/prism/prism.js"></script>
+  <script src="bower_components/prism/components/prism-markup.js"></script>
+  <script src="bower_components/prism/components/prism-css.js"></script>
+  <script src="bower_components/prism/components/prism-css-extras.js"></script>
+  <script src="bower_components/prism/components/prism-scss.js"></script>
+  <script src="bower_components/prism/components/prism-javascript.js"></script>
 
   <script src="js/test.js"></script>
 
