--- a/index.html
+++ b/index.html
@@ -24,17 +24,16 @@
   <script src="bower_components/angular-route/angular-route.js"></script>
   <script src="bower_components/angular-local-storage/angular-local-storage.js"></script>
 
-  <script src="js/templates.js"></script>
-  <script src="js/factories.js"></script>
-  <script src="js/directives.js"></script>
-  <script src="js/app.js"></script>
-
-  <script src="bower_components/prism/prism.js"></script>
-  <script src="bower_components/prism/components/prism-markup.js"></script>
+  <script src="bower_components/prism/prism.js" data-manual></script>
   <script src="bower_components/prism/components/prism-css.js"></script>
   <script src="bower_components/prism/components/prism-css-extras.js"></script>
   <script src="bower_components/prism/components/prism-scss.js"></script>
   <script src="bower_components/prism/components/prism-javascript.js"></script>
+
+  <script src="js/templates.js"></script>
+  <script src="js/factories.js"></script>
+  <script src="js/directives.js"></script>
+  <script src="js/app.js"></script>
 
   <script src="js/test.js"></script>
 
